--- a/starter-page.html
+++ b/starter-page.html
@@ -382,7 +382,7 @@
 
             <div class="row">
                 <div class="çol-12">
-                    <img src="img/kite.png" ;>
+                    <img src="img/kite.png";>
                 </div>
             </div><!-- end-.row -->
             
@@ -399,7 +399,7 @@
 
             <div class="row" style="background-color: #3c8BB6; padding: 5% 0 3%;">
                 <div class="col-12">
-                    <img src="images/paper.png" width="95%" ;>
+                    <img src="images/paper.png" width="95%";>
                 </div><!-- end col-12 -->
             </div> <!-- end class row -->
 	
@@ -409,7 +409,7 @@
                     <h2>Award winning accommodation, self catering or bed and breakfast</h2>
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
-                            <img src="img/paper.png" ;>
+                            <img src="./img/paper.png";>
 
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
@@ -419,11 +419,11 @@
 
           <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
             <ul><!--start of menu list-->
-              <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-              <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-              <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
-              <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-              <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+              <li class="btn"> <a href=./"accommodation.html" title="Accommodation">Accommodation</a></li>
+              <li class="btn"><a href="./maps.html" title="Location Maps">Maps</a></li>
+              <li class="btn"><a href="./index[1].html" title="Frequently Asked Questions">Information</a></li>
+              <li class="btn"><a href=",/starter-page.html" title="Local attractions">Attractions</a></li>
+              <li class="btn"><a href="./HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
             </ul><!--end of menu list-->
           </nav>
 
@@ -490,20 +490,14 @@
                       src="images/beachbig.jpg" alt=""></a></li>
               </ul>
               <ul id="gallerypagecol-2">
-                <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img class="hid"
-                      src="images/fernsbig.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid"
-                      src="images/nicobig.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach" title="Child and Beach"><img
-                      class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
               </ul>
               <ul id="gallerypagecol-3">
-                <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern"
-                      title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid"
-                      src="images/felixbig.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid"
-                      src="images/cliffbig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
               </ul><br class="clear">
             </div><!--gallery block closed-->
           </div><!--midcol closed-->
