--- a/about.html
+++ b/about.html
@@ -67,6 +67,7 @@
 
     <body>
         <div class="wrapper">
+			 <img class="logo" src="./img/flexy-logo.png">
 			<div id="container">
 				<div class="row">
                     <div class="col-12">
@@ -84,7 +85,7 @@
 								<li><a href="./creating-a-website.html">Create-a-website</a></li>
                             </ul>
                         </nav>
-					    <img class="logo" src="img/flexy-logo.png">
+					   
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
 				<!--
