--- a/about.html
+++ b/about.html
@@ -67,8 +67,8 @@
 
     <body>
         <div class="wrapper">
-			 <img class="logo" src="./img/flexy-logo.png">
-			<div id="container">
+			<img class="logo" src="./img/flexy-logo.png">
+		    <div id="container">
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
@@ -787,7 +787,7 @@
 		                        </ul>
                             </menu>
 
-                    <section id="hero" class="d-flex align-items-center scrolled-offset"> <!-- start Hero --
+                    <section id="hero" class="d-flex align-items-center scrolled-offset"> <!-- start Hero -->
                         <div class="container position-relative aos-init aos-animate" data-aos="fade-up"
                             data-aos-delay="500">
                             <!--- Slider Start -->
