--- a/about.html
+++ b/about.html
@@ -111,6 +111,43 @@
 					</div><!-- end-col-12 -->
                 </div><!-- end-row -->
                 <br class="clear">
+				<!--
+				<div class="row" style="background-color: #3c8BB6; padding: 5% 0 3%;">
+                <div class="col-12">
+                    <img src="images/paper.png" width="95%";>
+                </div><!-- end col-12 --
+            </div> <!-- end class row --
+	
+	        <div class="data" id="#html5style2content">
+      
+                <div class="data" id="#html5style2content"> --
+                    <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                    <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
+                        <div class="çol-12">
+                            <img src="./img/paper.png";>
+
+                            <div class="data" id="html5style2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <br>The superb interior of one of our cottages
+                            </div>
+
+          <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+            <ul><!--start of menu list--
+              <li class="btn"> <a href=./"accommodation.html" title="Accommodation">Accommodation</a></li>
+              <li class="btn"><a href="./maps.html" title="Location Maps">Maps</a></li>
+              <li class="btn"><a href="./index[1].html" title="Frequently Asked Questions">Information</a></li>
+              <li class="btn"><a href=",/starter-page.html" title="Local attractions">Attractions</a></li>
+              <li class="btn"><a href="./HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+            </ul><!--end of menu list--
+          </nav>
+
+          <!--</div> removed and replaced with </nav>--
+          <div class="data" id="html5style2midcol">
+            <h3>Situated in the BDA's beautiful countryside</h3>
+            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+          </div>
+				-->
 			
 		        <div class="data" id="html5-ch1-7content">            
                     <div class="row">
@@ -136,7 +173,7 @@
 
                             <div class="data" id="html5-ch1-7leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/clear-view-suites-villas (3).jpg" width="300">The superb interior of one of our cottages
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./images/bda2.jpg" width="300">
                             </div>
                             <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
@@ -151,7 +188,7 @@
         
                             <div class="data" id="html5-ch1-7midcol">
                                 <h3>Situated in the UK's beautiful Devon countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="bda-1.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./images/bda.gif" height="229" width="398">
                             </div>
                             <br class="clear">
 					    </div>
