--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
                                     <li><a href="./news.html">News</a></li>
                                     <li><a href="./starter-page.html">Specials</a></li>
 						            <li><a href="./index[1].html">Blog</a></li>
-							        <li><a href="./index2.html">Products</a></li>
+							        <li><a href="./HTML5-Ch1-7.html>Products</a></li>
                                 </ul>
                             </nav>
                         </div><!-- col-12 -->
