--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -152,8 +152,8 @@
                     <div class="col-12">
 				        <header class="data" id="html5-style-2header"><!-- <div id="hdr"> changed to <header> -->
 						    <hgroup>  
-					            <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
-					            <h2 class="heading" id="html5-style-2"><strong>StarTrackr!</strong> </h2>
+					            <h1 class="veryimportant heading stuff" id="html5-style-2h1">Practical HTML5 Projects for fun and Profit!</h1>
+					            <h2 class="heading" id="html5-style-2h2"><strong>StarTrackr!</strong> </h2>
 			                </hgroup>
 						    <img id="rosette" alt="Rosette" title="Rosette" height="127" src="images/rosette-128.png" width="128">
                         </header> 
@@ -182,7 +182,7 @@
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
-						            <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+						            <li class="btn"><a href="./HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
@@ -1144,7 +1144,7 @@
                         </div>
                     </div><!-- end col-7 -->
                 </div><!-- end.row -->	
-			</div><!-- content section closed-->
+			
                 <div class="row" style="background-color: #00AFE1">
                     <div class="col-12">
                         <img id="plane-background" src="./img/plane-background.png">
@@ -1173,19 +1173,19 @@
                                 officia deserunt mollit anim id est laborum.
                     </p>
                 </div>  
-            
-		</div><!-- end container -->
-            <div id="footer">
-                <ul class="social">
-                    <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
-                    <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
-                    <li><a href="#"><i class="instagram"></i></i></a></li>
-                </ul>
-                <p> &copy; Copyright 2025 MJ&#39;s Practical HTML5 Project&#39;s for Fun<span class="amp">&amp;</span>Profit - Productions</p>
-            </div><!-- end-footer -->
-	    
+        </div><!-- content section closed-->    
+		
+                <div id="footer">
+                    <ul class="social">
+                        <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
+                        <li><a href="#"><i class="instagram"></i></i></a></li>
+                    </ul>
+                    <p> &copy; Copyright 2025 MJ&#39;s Practical HTML5 Project&#39;s for Fun<span class="amp">&amp;</span>Profit - Productions</p>
+                </div><!-- end-footer -->
+	        </div><!-- end container -->
             <!-- document ready -->
             <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
             <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
