--- a/about.html
+++ b/about.html
@@ -151,18 +151,65 @@
                         <div class="col-11">
                             <h2>Get ready for take off.</h2>
 					
-                            <div class="data" id="navigation">
-                                <ul>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Buy Now!</a></li>
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Gift Ideas</a></li>
-                                </ul>
-                            </div>
-
-						    <p id="intro">
-                                Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
-                            </p>
+                            <header>
+<h1>A full page roll-over gallery of greetings cards</h1>
+<h2>Hover the mouse over a small picture to see an enlarged version</h2>
+</header>
+<nav>
+<ul>
+<li class="btn"><a href="#">Page Two</a></li>
+<li class="btn"><a href="#">Page Three</a></li>
+<li class="btn"><a href="#">Page Four</a></li>
+<li class="btn"><a href="#">Home Page</a></li>
+</ul>
+</nav>
+<div id="rightcol">
+Secondary information<br><br>
+<p><a href="http://validator.w3.org/check?uri=referer">
+<img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" 
+alt="Validated HTML5" title="Validated HTML5"></a>
+</p>
+<p>
+a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" 
+height="31" title="Valid CSS!" alt="Valid CSS!"></a>
+<span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
+</p>
+<br class="clear">
+<p class="advert">Web Design by Fred Bloggs</p></div>
+<div id="midcol">
+<div id="gallery-block">
+<ul id = "col-1">
+<li><a href="#"><img src = "images/alithumb.jpg" alt="Ali" title="Ali">
+<img class = "hid" src = "images/alibig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/catthumb.jpg" alt="Cat" title="Cat">
+<img class = "hid" src = "images/catbig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/beachthumb.jpg" alt="Beach" title="Beach">
+<img class = "hid" src = "images/beachbig.jpg" alt=""></a></li>
+</ul>
+<ul id = "col-2">
+<li><a href="#"><img src = "images/fernsthumb.jpg" alt="Ferns" title="Ferns">
+<img class = "hid" src = "images/fernsbig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/nicothumb.jpg" alt="Nico" title="Nico">
+<img class = "hid" src = "images/nicobig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/childbeachthumb.jpg" alt="Child and Beach" 
+title="Child and Beach">
+<img class = "hid" src = "images/childbeachbig.jpg" alt=""></a></li>
+</ul>
+<ul id = "col-3">
+<li><a href="#"><img src = "images/ancientthumb.jpg" alt="Ancient and modern" 
+title="Ancient and Modern">
+<img class = "hid" src = "images/ancientbig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/felixthumb.jpg" alt="Felix" title="Felix">
+<img class = "hid" src = "images/felixbig.jpg" alt=""></a></li>
+<li><a href="#"><img src = "images/cliffthumb.jpg" alt="Cliffs" title="Cliffs">
+<img class = "hid" src = "images/cliffbig.jpg" alt=""></a></li>
+50CHAPTER 2 ■ A ROLLOVER PICTURE GALLERY
+</ul><br class="clear">
+</div><!--gallery block closed-->
+</div><!--midcol closed-->
+<footer>
+Footer goes here
+</footer>
                         </div><!-- end col-11 -->
                     </div> <!-- end class row -->
 
