--- a/about.html
+++ b/about.html
@@ -155,15 +155,15 @@
                                 <h1>A full page roll-over gallery of greetings cards</h1>
                                 <h2>Hover the mouse over a small picture to see an enlarged version</h2>
                             </header>
-<nav>
-<ul>
-<li class="btn"><a href="#">Page Two</a></li>
-<li class="btn"><a href="#">Page Three</a></li>
-<li class="btn"><a href="#">Page Four</a></li>
-<li class="btn"><a href="#">Home Page</a></li>
-</ul>
+                            <nav>
+                                <ul>
+                                    <li class="btn"><a href="#">Page Two</a></li>
+                                    <li class="btn"><a href="#">Page Three</a></li>
+                                    <li class="btn"><a href="#">Page Four</a></li>
+                                    <li class="btn"><a href="#">Home Page</a></li>
+                                </ul>
 </nav>
-<div id="rightcol">
+<div id="gallerypagerightcol">
 Secondary information<br><br>
 <p><a href="http://validator.w3.org/check?uri=referer">
 <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" 
@@ -176,8 +176,8 @@ height="31" title="Valid CSS!" alt="Valid CSS!"></a>
 </p>
 <br class="clear">
 <p class="advert">Web Design by Fred Bloggs</p></div>
-<div id="midcol">
-<div id="gallery-block">
+<div id="gallerypagemidcol">
+<div id="gallerypagegallery-block">
 <ul id = "col-1">
 <li><a href="#"><img src = "images/alithumb.jpg" alt="Ali" title="Ali">
 <img class = "hid" src = "images/alibig.jpg" alt=""></a></li>
