--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                    
                     <div class="row">
                          <div class="çol-12">
-                            <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                            <h2>Practical HTML5 Projects for fun and Profit!</h2>
 
                             <div class="data" id="html5-ch1-7leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
@@ -133,7 +133,7 @@
 		            <div class="row">
                         <div class="çol-12" padding="2%">
 						    <div id="banner-wrapper">
-                                <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!</h2>
+                                <h2 class="dark" id="html5-ch1-7h2">Award winning accommodation, self catering or bed and breakfast</h2>
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-row -->
