--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
 				        <header data-role="header" class="data" id="html5-style-2header"><!-- <div id="hdr"> changed to <header> -->
 				            <hgroup>  
 						        <h1 class="veryimportant heading stuff" id="html5-style-2h1">Tourorris Rural Retreats!</h1>
-						        <h2 class="heading" id="html5-style-2h2">><strong>StarTrackr!</strong></h2>
+						        <h2 class="heading" id="html5-style-2h2"><strong>StarTrackr!</strong></h2>
 					        </hgroup>
 					        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                             <br>Orris</p>
