--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                 </div><!-- end-row -->
                 <br class="clear">	
 				
-		        <!-- <div class="data" id="#html5style2content"> -->
+		        <div class="data" id="#html5style2content"> 
       <h2>Award winning accommodation, self catering or bed and breakfast</h2>
       <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="çol-12">
