--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     </head>
     <body>
 		<div class="wrapper">
-			<div class="data" id="container">
-				<img class="logo" src="./img/flexy-logo.png">
+			<img class="logo" src="./img/flexy-logo.png">
+		    <div id="container">
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
@@ -125,10 +125,9 @@
                                 <li><a href="./starter-page.html">Specials</a></li>
 					            <li><a href="./index[1].html">Blog</a></li>
 					            <li><a href="./index2.html">Products</a></li>
-								<li><a href="./creating-a-website.html">Create-a-website</a></li>
+								<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -->
                             </ul>
                         </nav>
-					    
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
 				
