--- a/starter-page.html
+++ b/starter-page.html
@@ -94,7 +94,7 @@
 				        <header data-role="header" class="data" id="html5-style-2header"><!-- <div id="hdr"> changed to <header> -->
 				            <hgroup>  
 						        <h1 class="veryimportant heading stuff" id="html5-style-2h1">Tourorris Rural Retreats!</h1>
-						        <h2 class="heading" id="html5-style-2h2"><strong>StarTrackr!</strong></h2>
+						        <h2 class="heading" id="html5style2h2"><strong>StarTrackr!</strong></h2>
 					        </hgroup>
 					        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                             <br>Orris</p>
@@ -103,7 +103,7 @@
                 </div><!-- end-row -->
                 <br class="clear">	
 				
-	            <div class="data" id="#html5style2content"> -->
+	            <div class="data" id="#html5style2content">
                     <h2>Award winning accommodation, self catering or bed and breakfast</h2>
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
