--- a/starter-page.html
+++ b/starter-page.html
@@ -188,16 +188,21 @@
                     <div class="row" style="background-color: #1abc9c;">
                         <div class="col-10">
                             <h2>We're flying around the globe</h2>
-                            <div id="news">
-                                <h2>Latest News</h2>
-                                <p>
-                                    Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last night
-                                    at <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by the
-                                    chef's own hands?
-                                    <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
-                                </p>
-                                <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
-                            </div>
+                            <!--   Listing 2-5a. Creating Three Columns of Mixed Format Images with Rollover (gallery-3col-mix.html) -->
+                            <ul id="gallery3colmixcol-1">
+                                <li><a href="#"><img src = "images/alithumb.jpg" title="Ali" alt="Ali"><img class = "hid" src = "images/alilarge.jpg" alt=""></a></li>
+                                <li><a href="#"><img src = "images/catthumb.jpg" title="Cat" alt="Cat"><img class = "hid" src="images/catlarge.jpg" alt=""></a></li>
+                                <li><a href="#"><img src = "images/beachthumb.jpg" title="Beach" alt="Beach"><img class = "hid" src = "images/beachlarge.jpg" alt=""></a></li>
+                            </ul>
+                            <ul id = "gallery3colmixcol-2">
+								<li><a href="#"><img src = "images/childrenthumb.jpg" title="Children" alt="Children"><img class = "hid" src = "images/childrenbig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src = "images/seathumb.jpg" title="Seascape" alt="Seascape"><img class = "hid" src = "images/seabig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src = "images/take-cardthumb.jpg" title="Take a card" alt="Take a card"><img class = "hid" src = "images/take-cardbig.jpg" alt=""></a></li>
+                            </ul>
+                            <ul id = "gallery3colmixcol-3">
+                                <li><a href="#"><img src = "images/walesthumb.jpg" title="Wales" alt="Wales"><img class = "hid" src = "images/walesbig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src = "images/pensthumb.jpg" title="Chelsea pensioners" alt="Chelsea pensioners"><img class = "hid" src = "images/pensbig.jpg" alt=""></a></li>
+                            </ul>
                         </div>
                         <div class="col-3">
                             <img id="waves" class="circle" src="images/waves.png">
@@ -529,7 +534,7 @@
             Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
             You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
           </p>
-        </div><!-- end col-11 -->
+        </div><!-- end col-11 --
       </div> <!-- end class row --
 
       <div class="row" style="background-color: #F6931E;">
