--- a/starter-page.html
+++ b/starter-page.html
@@ -92,7 +92,7 @@
 				        <header data-role="header" class="data" id="html5-style-2header"><!-- <div id="hdr"> changed to <header> -->
 				            <hgroup>  
 						        <h1 class="veryimportant heading stuff" id="html5-style-2h1">Tourorris Rural Retreats!</h1>
-						        <h2 class="heading" id="html5style2h2"><strong>StarTrackr!</strong></h2>
+						        <h2 class="heading" id="html5-style-2h2"><strong>StarTrackr!</strong></h2>
 					        </hgroup>
 					        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                             <br>Orris</p>
@@ -101,19 +101,19 @@
                 </div><!-- end-row -->
                 <br class="clear">	
 				
-	            <div class="data" id="#html5style2content">
+	            <div class="data" id="#html5-style-2content">
                     <h2>Get ready for take off.</h2>
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
                             <img src="img/paper.png" ;>
 
-                            <div class="data" id="html5style2leftcol">
+                            <div class="data" id="html5-style-2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
                                 <br>The superb interior of one of our cottages
                             </div>
 
-                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                            <nav class="data" id="html5-style-2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
@@ -123,7 +123,7 @@
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
-                            <div class="data" id="html5style2midcol">
+                            <div class="data" id="html5-style-2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
                             </div>
