--- a/starter-page.html
+++ b/starter-page.html
@@ -134,11 +134,11 @@
                     <div class="row" style="background-color: #F6931E;">
                         <div class="col-11">
                             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-                            <header class="data" id="gallerypageheader">
+                            <header class="data" id="gallery-pageheader">
                                 <h1>A full page roll-over gallery of greetings cards</h1>
                                 <h2>Hover the mouse over a small picture to see an enlarged version</h2>
                             </header>
-                            <nav class="data" id="gallerypagenav">
+                            <nav class="data" id="gallery-pagenav">
                                 <ul>
                                     <li class="btn"><a href="#">Page Two</a></li>
                                     <li class="btn"><a href="#">Page Three</a></li>
@@ -147,7 +147,7 @@
                                 </ul>
                             </nav>
                             <br class="clear">
-                            <div class="data" id="gallerypagerightcol">
+                            <div class="data" id="gallery-pagerightcol">
                                 <h4> StarTrackr</h4>
                                 <br><br>
                                 <p>
@@ -161,8 +161,8 @@
                                 <p class="advert">Web Design by Orris Baker</p>
                             </div>
                             <br class="clear">
-                            <div class="data" id="gallerypagemidcol">
-                                <div class="data" id="gallerypagegallery-block">
+                            <div class="data" id="gallery-pagemidcol">
+                                <div class="data" id="gallery-pagegallery-block">
                                     <ul id="gallerypagecol-1">
                                         <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
                                         <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
