--- a/news.html
+++ b/news.html
@@ -86,6 +86,7 @@
     </head>
 	<body>
         <div class="wrapper">
+			<img class="logo" src="img/flexy-logo.png">
 			<div id="container">
 				<div class="row">
                     <div class="col-12">
@@ -103,19 +104,10 @@
 								<li><a href="./creating-a-website.html">Create-a-website</a></li>
                             </ul>
                         </nav>
-					    <img class="logo" src="img/flexy-logo.png">
+					    
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
-				<!--
-				<article>
-                    <hgroup>
-                        <h1>I put our holiday dates and address on a Family network</h1>
-                        <h2>An idiot’s tale</h2>
-                    </hgroup>
-                    <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
-                     <br>Loopy Orris</p>
-                    </article
-				-->
+				<br class="clear">
 				<div class="row">
                     <div class="col-12">
 				        <header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
