--- a/news.html
+++ b/news.html
@@ -446,18 +446,7 @@
             </div>               
         </div><!-- end wrapper -->
     </body><!-- end body  -->   
-</html>
-		<div class="wrapper">
-			
-			<img class="logo" src="img/flexy-logo.png">
-			
-			<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
-                
-                <div class="col-12">
-				    <h1 id="html5-ch1-7h1">StarTrackr!</h1>
-                </div><!-- end-col-12 -->
-				
-            </header>
+
 
             <div class="row">
                 <div class="col-12">
@@ -1256,33 +1245,31 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
+                            </section>
+                        </div>
 
-    <div class="row" style="background-color: #66d4ff;">
-        <div class="col-12">
-            <ul class="social">
-                <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
-                <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
-                <li><a href="#"><i class="instagram"></i></i></a></li>
-            </ul>
-        </div> <!-- end col-3 -->
-    </div> <!-- end class row -->
-    <a href="https://orris0.github.io/orris0/index.html"
-        class="back-to-top d-flex align-items-center justify-content-center"><i
-            class="bi bi-arrow-up-short"></i></a>
-    <div class="col-12">
-        <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
-            <p>&copy; Kite-It.</p>
-        </div>
-    </div>
-</footer>
-</div><!-- main-content -->
-</div><!-- end wrapper -->
-</div><!--end container>-->
-</body><!-- end body  -->
+                        <div class="row" style="background-color: #66d4ff;">
+                            <div class="col-12">
+                                <ul class="social">
+                                    <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
+                                    <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
+                                    <li><a href="#"><i class="instagram"></i></i></a></li>
+                                </ul>
+                            </div> <!-- end col-3 -->
+                        </div> <!-- end class row -->
+                        <a href="https://orris0.github.io/orris0/index.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+                        <div class="col-12">
+                            <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+                                <p>&copy; Kite-It.</p>
+                            </div>
+                        </div>
+                    </footer>
+                </div><!-- main-content -->
+            </div><!-- end wrapper -->
+        </div><!--end container>-->
+    </body><!-- end body  -->
 
 </html>
 
