--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>SEO Specialist-Eldrige Smith</title>
-		<meta charset=utf-8>
+		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
@@ -20,10 +20,10 @@
         <script type="text/javascript" src="./js/scripts.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-	    <link rel="stylesheet" href="style.css"> 
+	    <!-- <link rel="stylesheet" href="style.css"> -->
         <link rel="stylesheet" href="style[1].css"> 
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-	    <link rel="stylesheet" href="./nav[1].css">
+	    <!-- <link rel="stylesheet" href="./nav[1].css"> -->
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
