--- a/starter-page.html
+++ b/starter-page.html
@@ -67,7 +67,7 @@
     <body>
 	    <div class="wrapper">
 			<img class="logo" src="./img/flexy-logo.png">
-		    <div id="container">
+		    <!-- <div id="container"> -->
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
