--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -62,7 +62,8 @@
 		<link rel="stylesheet" href="./CSS/mainstyle.css">
 		<link rel="stylesheet" href="./CSS/nifty-tabs.css">
 		<link rel="stylesheet" href="./CSS/niftyCorners.css">
-		<link rel="stylesheet" href="./CSS/sliding.css">
+		<!-- <link rel="stylesheet" href="./CSS/sliding.css">
+-->
 		<link rel="stylesheet" href="./CSS/squaretabs.css">
 		<link rel="stylesheet" href="./CSS/style-yosemite-2.css">
 		<link rel="stylesheet" href="./CSS/turquoise.css">
