--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -129,7 +129,9 @@
     <body>
 		<div class="wrapper">
 			<img class="logo" src="./img/flexy-logo.png">
-		    <div id="container">
+		   <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px"><text x="20" y="50" style="font-family:times new roman; 
+               font-size:36pt; font-weight:bold; letter-spacing:20px; stroke:black; fill:white; ">TourOrris</text>
+</svg>
 				<div class="row">
                     <div class="col-12"
                         <nav role="navigation" class="data" id="nav">
