--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -128,7 +128,7 @@
     </head>
     <body>
 		<div class="wrapper">
-			<a href="./images/johnny_400.jpg" class="lightbox">pic</a>
+			<a href="./CSS/images/grandparents.jpg" class="lightbox">pic</a>
 			<img class="logo" src="./img/flexy-logo.png">
 		   <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px"><text x="20" y="50" style="font-family:times new roman; 
                font-size:36pt; font-weight:bold; letter-spacing:20px; stroke:black; fill:white; ">TourOrris</text>
