--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
-        <meta charset=utf-8>
+        <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-96 39638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Tememplated9
@@ -111,7 +111,6 @@
     <body>
 		<div class="wrapper">
 			<img class="logo" src="./img/flexy-logo.png">
-		    <div id="container">
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
@@ -488,7 +487,6 @@
                 <script src="../orris0/main.js"></script>
 			    <a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
                     		        
-			</div><!-- end-container -->
 		</div><!-- end wrapper -->
     </body><!-- end body  -->   
 </html>
