--- a/about.html
+++ b/about.html
@@ -65,9 +65,8 @@
         <![endif]-->
     </head>
     <body>
-        <div class="wrapper">
+        div class="wrapper">
 			<img class="logo" src="./img/flexy-logo.png">
-		    <div id="container">
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
