--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 	    <link rel="stylesheet" href="style.css"> 
-     <!--   <link rel="stylesheet" href="style[1].css"> 
-        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> -->
-	    <link rel="stylesheet" href="nav[1].css">
-		<link rel="stylesheet" href="aos.css">
+       <link rel="stylesheet" href="style[1].css"> 
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> 
+	<!--     <link rel="stylesheet" href="nav[1].css">
+		<link rel="stylesheet" href="aos.css">-->
 		<link rel="stylesheet" href="bootstrap-icons.css">
 		<link rel="stylesheet" href="bootstrap.min.css">
 		<link rel="stylesheet" href="boxicons.min.css">
