--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <![endif]-->
     </head>
     <body>
-        div class="wrapper">
+        <div class="wrapper">
 			<img class="logo" src="./img/flexy-logo.png">
 				<div class="row">
                     <div class="col-12">
