--- a/membership.html
+++ b/membership.html
@@ -68,7 +68,7 @@
     </head>
 	<body>	
         <div class="wrapper">
-			<div id="container">
+			<img class="logo" src="./img/flexy-logo.png">
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
@@ -82,10 +82,9 @@
                                 <li><a href="./starter-page.html">Specials</a></li>
 					            <li><a href="./index[1].html">Blog</a></li>
 					            <li><a href="./index2.html">Products</a></li>
-								<li><a href="./creating-a-website.html">Create-a-website</a></li>
+								<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -->
                             </ul>
                         </nav>
-					    <img class="logo" src="img/flexy-logo.png">
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
 				<!--
