--- a/membership.html
+++ b/membership.html
@@ -2,7 +2,7 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Turquoise membership page</title>
-        <meta charset=utf-8>
+        <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
@@ -158,24 +158,6 @@
 				
                 <h2 id="html5-ch1-7h2>Practical HTML5 Projects for fun and Profit!</h2>
             
-                <div class="row">
-                    <div class="col-12">
-                        <nav role="navigation" id="nav">
-                            <input class="trigger" type="checkbox" id="mainNavButton">
-                            <label for="mainNavButton" onclick>Menu</label>
-                            <ul>
-                                <li><a href="./index.html">Home</a></li>
-                                <li><a href="./about.html">About Us</a></li>
-                                <li><a href="./membership.html">Membership</a></li>
-                                <li><a href="./news.html">News</a></li>
-                                <li><a href="./starter-page.html">Specials</a></li>
-						        <li><a href="./index[1].html">Blog</a></li>
-							    <li><a href="./index2.html">Products</a></li>
-                            </ul>
-                        </nav>
-                    </div><!-- col-12 -->
-                </div><!-- end-.row -->
-
                 <div class="row">
                     <div class="çol-12">
                       <img src="img/kite.png" ;>
