--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -17,6 +17,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+	    <link rel="stylesheet" href="./style.css"> 
+        <link rel="stylesheet" href="./style[1].css"> 
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+	    <link rel="stylesheet" href="./nav[1].css">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
         <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
