--- a/about.html
+++ b/about.html
@@ -85,13 +85,22 @@
                         </nav>
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
-				
+				<!--
+				<article>
+                    <hgroup>
+                        <h1>I put our holiday dates and address on a Family network</h1>
+                        <h2>An idiot’s tale</h2>
+                    </hgroup>
+                    <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
+                     <br>Loopy Orris</p>
+                    </article
+				-->
 				<div class="row">
                     <div class="col-12">
-				        <header data-role="header" class="data" id="html5-style-2header"><!-- <div id="hdr"> changed to <header> -->
+				        <header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				            <hgroup>  
-						        <h1 class="veryimportant heading stuff" id="html5-style-2h1">Tourorris Rural Retreats!</h1>
-						        <h2 class="heading" id="html5-style-2h2"><strong>StarTrackr!</strong></h2>
+						        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
+						        <h2 class="heading"><strong>StarTrackr!</strong></h2>
 					        </hgroup>
 					        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                             <br>Orris</p>
