--- a/news.html
+++ b/news.html
@@ -86,8 +86,7 @@
     </head>
 	<body>
         <div class="wrapper">
-			<img class="logo" src="img/flexy-logo.png">
-			<div id="container">
+			<img class="logo" src="./img/flexy-logo.png">
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
@@ -101,13 +100,21 @@
                                 <li><a href="./starter-page.html">Specials</a></li>
 					            <li><a href="./index[1].html">Blog</a></li>
 					            <li><a href="./index2.html">Products</a></li>
-								<li><a href="./creating-a-website.html">Create-a-website</a></li>
+								<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -->
                             </ul>
                         </nav>
-					    
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
-				<br class="clear">
+				<!--
+				<article>
+                    <hgroup>
+                        <h1>I put our holiday dates and address on a Family network</h1>
+                        <h2>An idiot’s tale</h2>
+                    </hgroup>
+                    <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
+                     <br>Loopy Orris</p>
+                    </article
+				-->
 				<div class="row">
                     <div class="col-12">
 				        <header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
