--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <link rel="stylesheet" href="style[1].css"> 
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> 
 	<!--     <link rel="stylesheet" href="nav[1].css">
-		<link rel="stylesheet" href="aos.css">-->
+		<link rel="stylesheet" href="aos.css">--
 		<link rel="stylesheet" href="bootstrap-icons.css">
 		<link rel="stylesheet" href="bootstrap.min.css">
 		<link rel="stylesheet" href="boxicons.min.css">
@@ -44,7 +44,7 @@
 		<link rel="stylesheet" href="boxicons.min.css">
 		<link rel="stylesheet" href="boxicons.min.css">
 
-		
+		-->
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="font-awesome.min[1].css">
