--- a/starter-page.html
+++ b/starter-page.html
@@ -205,6 +205,9 @@
                         <div class="col-10">
                             <h2>We're flying around the globe</h2>
                             <!--   Listing 2-5a. Creating Three Columns of Mixed Format Images with Rollover (gallery-3col-mix.html) -->
+							
+						    <div class="data" id="gallery3colmixmidcol">
+                            <div class="data" id="gallery3colmixgallery-block">
                             <ul id="gallery3colmixcol-1">
                                 <li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali"><img class="hid" src="images/alilarge.jpg" alt=""></a></li>
                                 <li><a href="#"><img src="images/catthumb.jpg" title="Cat" alt="Cat"><img class="hid" src="images/catlarge.jpg" alt=""></a></li>
@@ -219,7 +222,30 @@
                                 <li><a href="#"><img src="images/walesthumb.jpg" title="Wales" alt="Wales"><img class="hid" src="images/walesbig.jpg" alt=""></a></li>
                                 <li><a href="#"><img src="images/pensthumb.jpg" title="Chelsea pensioners" alt="Chelsea pensioners"><img class="hid" src="images/pensbig.jpg" alt=""></a></li>
                             </ul>
-                        </div>
+                            </div>
+						    <!--
+						     <div class="data" id="gallery-pagemidcol">
+                                <div class="data" id="gallery-pagegallery-block">
+                                    <ul id="gallerypagecol-1">
+                                        <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
+                                    </ul>
+                                    <ul id="gallerypagecol-2">
+                                        <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
+                                    </ul>
+                                    <ul id="gallerypagecol-3">
+                                        <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
+                                    </ul><br class="clear">
+                                </div><!--gallery block closed-->
+                            </div><!--midcol closed-->
+                        </div><!-- end col-11 -->
+                    </div> <!-- end class row -->
+						-->
                         <div class="col-3">
                             <img id="waves" class="circle" src="images/waves.png">
                         </div><!-- end col-3 -->
