--- a/index.html
+++ b/index.html
@@ -113,6 +113,41 @@
 			<img class="logo" src="./img/flexy-logo.png">
 				<div class="row">
                     <div class="col-12">
+						<body>
+	<div id="container">
+		<div id="header">
+			<h1>StarTrackr!</h1>
+		</div>
+		<div id="content">
+			<h2>
+				Welcome!
+			</h2>
+      <nav role="navigation">		
+        <ul id="menu">
+          <li><a href="#">What's new?</a>
+            <ul class="active">
+              <li><a href="#">Weekly specials</a></li>
+              <li><a href="#">Last night's pics!</a></li>
+              <li><a href="#">Users' comments</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Member extras</a>
+            <ul>
+              <li><a href="#">Premium Celebrities</a></li>
+              <li><a href="#">24-hour Surveillance</a></li>
+            </ul>
+          </li>
+          <li><a href="#">About Us</a>
+            <ul>
+              <li><a href="#">Privacy Statement</a></li>
+              <li><a href="#">Terms and Conditions</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+			<!--
+			
                         <nav role="navigation" class="data" id="nav">
                             <input class="trigger" type="checkbox" id="mainNavButton">
                             <label for="mainNavButton" onclick>Menu</label>
@@ -127,6 +162,7 @@
 								<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -->
                             </ul>
                         </nav>
+			-->
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
 				<!--
