--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <li><a href="./starter-page.html">Specials</a></li>
 					            <li><a href="./index[1].html">Blog</a></li>
 					            <li><a href="./index2.html">Products</a></li>
-								<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -->
+								<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -
                             </ul>
                         </nav>
 			-->
