--- a/index.html
+++ b/index.html
@@ -257,67 +257,42 @@
                         <img alt="Mo' Fat" src="./images/mofat_200.jpg" />
                     </div>
                     <div id="celebs">
-                        <h2 class="heading">Our Celebrities</h2>
-                        <p class="info">
-                           We have an ever changing roster of newly chipped celebrities. But it can take as little as a week
-                            for the little critters to realise they've been tagged - so you have to be fast!
-                        </p>
-                        <table class="data">
-                            <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Name</th>
-                                    <th>Occupation</th>
-                                    <th>Approx. Location</th>
-                                    <th>Price</th>
-                               </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>203A</td>
-                                    <td>Johny Stardust (<a href="images/johnny_400.jpg" class="lightbox">pic</a>)</td>
-                                    <td>Front-man</td>
-                                    <td>Los Angeles</td>
-                                    <td>$39.95</td>
-                                </tr>
-                                <tr>
-                                    <td>141B</td>
-                                    <td>Beau Dandy (<a href="images/beau_400.jpg" class="lightbox">pic</a>)</td>
-                                    <td>Singer</td>
-                                    <td>New York</td>
-                                    <td>$39.95</td>
-                                </tr>
-                                <tr>
-                                    <td>2031</td>
-                                    <td>Mo' Fat (<a href="./jQuery-novice-to-ninja/images/mofat_400.jpg" class="lightbox">pic</a>)</td>
-                                    <td>Producer</td>
-                                    <td>New York</td>
-                                    <td>$19.95</td>
-                                </tr>
-                                <tr>
-                                    <td>007F</td>
-                                    <td>Kellie Kelly (<a href="images/kellie_400.jpg" class="lightbox">pic</a>)</td>
-                                    <td>Singer</td>
-                                    <td>Omaha</td>
-                                    <td>$11.95</td>
-                                </tr>
-                                <tr>
-                                    <td>8A05</td>
-                                    <td>Darth Fader (<a href="/images/fader_400.jpg" class="lightbox">pic</a>)</td>
-                                    <td>DJ</td>
-                                    <td>London</td>
-                                    <td>$19.95</td>
-                                </tr>
-                                <tr>
-                                    <td>6636</td>
-                                    <td>Glendatronix (<a href="./jQuery-novice-to-ninja/images/glenda_400.jpg" class="lightbox">pic</a>)</td>
-                                    <td>Keytarist</td>
-                                    <td>London</td>
-                                    <td>$39.95</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>      
+  			<h2 class="heading">Our Celebrities</h2>
+  			<p class="info">
+  				We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for the little critters to realise they've been tagged - so you have to be fast! 
+  			</p>
+        <ul id="accordion">
+        	<li class="active">
+        		A-List Celebrities
+        		<ul>
+              <li><a href="#">Computadors</a> &nbsp;New!</li>
+              <li><a href="#">Johny Stardust</a></li>
+              <li><a href="#">Beau Dandy</a></li>
+						</ul>
+        	</li>
+        	<li>
+        		B-List Celebrities
+        		<ul>
+        			<li><a href="#">Sinusoidal Tendancies</a></li>
+        			<li><a href="#">Steve Extreme</a></li>
+        		</ul>
+        	</li>
+        	<li>
+        		Has Beens
+        		<ul>
+        			<li>Duran Duran Duran</li>
+        			<li>Mike's Mechanic</li>
+        		</ul>
+        	</li>
+        	<li>
+        		Barely Famous Celebrities
+        		<ul>
+        			<li>Lardy Dah</li>
+        			<li>Rove Live</li>
+        		</ul>
+        	</li>
+        </ul> 
+      </div>     
                     <br class="clear">
                     <hr>
 
