--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" href="./CSS/menus.css" type="text/css" media="screen" charset="utf-8"/>
 		<script src="../../jquery.hoverIntent.js" type="text/javascript" charset="utf-8"></script>
 		<link rel="stylesheet" href="../../css/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8"/>
-
+        <link rel="stylesheet" href="tabs.css" type="text/css" media="screen" charset="utf-8"/>
 	    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
 	    <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
@@ -123,6 +123,21 @@
 	        <div id="container">
 		<div id="header">
 			<h1>StarTrackr!</h1>
+			<div id="login">
+        <a href="#">Log in</a>
+        <form action="">
+          <div>
+            <label for="username">Username:</label>
+            <input name="username" id="username" type="text"/>
+          </div>
+          <div>
+            <label for="password">Password:</label>
+            <input name="password" id="password" type="password"/>
+          </div>
+          <div>
+          	<input type="submit" value="Log in!" />
+        	</div>
+        </form>
 		</div>
 		<div id="content">
 			<h2>
