--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -1,7 +1,7 @@
 <!-- Listing 1-7a. The new HTML5 listing (HTML5-Ch1-7.html) -->
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app lang="en">
-    <head profile="http://www.w3.org/2005/10/profile">
+    <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<!-- meta details go here -->
         <title>Test page-HTML5 expanded section example-ch1-7</title>
