--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -31,10 +31,12 @@
 		
 		
 		<link rel="stylesheet" href="./CSS/HTML5-style-2.css">
-		
+		<!--
 		
 		<link rel="stylesheet" href="./CSS/nav-style.css">
-		<!--<link rel="stylesheet" href="./CSS/starter-page-style-2.css">
+		
+		-->
+		<link rel="stylesheet" href="./CSS/starter-page-style-2.css">
 		<link rel="stylesheet" href="./CSS/starter-page-style.css">
 		<link rel="stylesheet" href="./CSS/gallery-2col.css">
 		<link rel="stylesheet" href="./CSS/gallery-3col-mix.css">
