--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -37,7 +37,7 @@
 		
 		-->
 		<link rel="stylesheet" href="./CSS/starter-page-style-2.css">
-		<link rel="stylesheet" href="./CSS/starter-page-style.css">
+		<!-- <link rel="stylesheet" href="./CSS/starter-page-style.css">
 		<link rel="stylesheet" href="./CSS/gallery-2col.css">
 		<link rel="stylesheet" href="./CSS/gallery-3col-mix.css">
 		<link rel="stylesheet" href="./CSS/gallery-one-col.css">
