--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -25,9 +25,12 @@
         <script src="./jquery.innerfade.js" type="text/javascript" ></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
-		
+		<link rel="stylesheet" href="./CSS/starter-page-style.css">
 	    <link rel="stylesheet" href="./style.css"> 
 	    <link rel="stylesheet" href="./nav[1].css">
+
+
+		
 		<!--
 		
 		<link rel="stylesheet" href="./CSS/HTML5-style-2.css">
@@ -35,9 +38,9 @@
 		
 		<link rel="stylesheet" href="./CSS/nav-style.css">
 		
-		-->
+		
 		<link rel="stylesheet" href="./CSS/starter-page-style-2.css">
-		<!-- <link rel="stylesheet" href="./CSS/starter-page-style.css">
+		
 		<link rel="stylesheet" href="./CSS/gallery-2col.css">
 		<link rel="stylesheet" href="./CSS/gallery-3col-mix.css">
 		<link rel="stylesheet" href="./CSS/gallery-one-col.css">
