--- a/index.html
+++ b/index.html
@@ -118,54 +118,51 @@
 		<div class="wrapper">
 			<img class="logo" src="./img/flexy-logo.png">
 				<div class="row">
-                    <div class="col-12">
-						
-		<div id="header">
-			<h1>StarTrackr!</h1>
-			<div id="login">
-        <a href="#">Log in</a>
-        <form action="">
-          <div>
-            <label for="username">Username:</label>
-            <input name="username" id="username" type="text"/>
-          </div>
-          <div>
-            <label for="password">Password:</label>
-            <input name="password" id="password" type="password"/>
-          </div>
-          <div>
-          	<input type="submit" value="Log in!" />
-        	</div>
-        </form>
-		</div>
-		<div id="content">
-			<h2>
-				Welcome!
-			</h2>
-      <nav role="navigation">		
-        <ul id="menu">
-          <li><a href="#">What's new?</a>
-            <ul class="active">
-              <li><a href="#">Weekly specials</a></li>
-              <li><a href="#">Last night's pics!</a></li>
-              <li><a href="#">Users' comments</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Member extras</a>
-            <ul>
-              <li><a href="#">Premium Celebrities</a></li>
-              <li><a href="#">24-hour Surveillance</a></li>
-            </ul>
-          </li>
-          <li><a href="#">About Us</a>
-            <ul>
-              <li><a href="#">Privacy Statement</a></li>
-              <li><a href="#">Terms and Conditions</a></li>
-              <li><a href="#">Contact Us</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
+                    <div class="col-12">				
+		                <div id="header">
+			                <h1>StarTrackr!</h1>
+			                    <div id="login">
+                                    <a href="#">Log in</a>
+                                    <form action="">
+                                        <div>
+                                            <label for="username">Username:</label>
+                                            <input name="username" id="username" type="text"/>
+                                        </div>
+                                        <div>
+                                            <label for="password">Password:</label>
+                                            <input name="password" id="password" type="password"/>
+                                        </div>
+                                        <div>
+                                            <input type="submit" value="Log in!" />
+                                   	    </div>
+                                    </form>
+		                        </div>
+		                        <div id="content">
+			                        <h2>Welcome!</h2>
+                                    <nav role="navigation">		
+                                        <ul id="menu">
+                                            <li><a href="#">What's new?</a>
+                                                <ul class="active">
+                                                    <li><a href="#">Weekly specials</a></li>
+                                                    <li><a href="#">Last night's pics!</a></li>
+                                                    <li><a href="#">Users' comments</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">Member extras</a>
+                                                <ul>
+                                                    <li><a href="#">Premium Celebrities</a></li>
+                                                    <li><a href="#">24-hour Surveillance</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">About Us</a>
+                                                <ul>
+                                                    <li><a href="#">Privacy Statement</a></li>
+                                                    <li><a href="#">Terms and Conditions</a></li>
+                                                    <li><a href="#">Contact Us</a></li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </nav>
 			<!--
 			
                         <nav role="navigation" class="data" id="nav">
@@ -189,7 +186,7 @@
 				<article>
                     <hgroup>
                         <h1>I put our holiday dates and address on a Family network</h1>
-                        <h2>An idiot’s tale</h2>
+                        <h2>An idiot's tale</h2>
                     </hgroup>
                     <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                      <br>Loopy Orris</p>
