--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<img class="logo" src="./img/flexy-logo.png">
 				<div class="row">
                     <div class="col-12">				
-		                <div id="header">
+		                <!-- <div id="header"> -->
 			                <h1>StarTrackr!</h1>
 			                    <div id="login">
                                     <a href="#">Log in</a>
@@ -137,7 +137,7 @@
                                    	    </div>
                                     </form>
 		                        </div>
-		                        <div id="content">
+		                        <!-- <div id="content"> -->
 			                        <h2>Welcome!</h2>
                                     <nav role="navigation">		
                                         <ul id="menu">
@@ -179,8 +179,8 @@
 								<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -
                             </ul>
                         </nav>
-			-->
-				    </div><!-- end-col-12 -->
+			--
+				    </div><!-- end-col-12 --
                 </div><!-- end-row -->
 				<!--
 				<article>
@@ -223,7 +223,7 @@
                     <b><p id="no-script">We recommend that you have JavaScript enabled!</p></b>
                     <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                     <div class="row">
-                        <div class="çol-12">
+                        <div class="col-12">
                             <img src="img/kite.png">
                         </div>
                     </div><!-- end-.row -->
@@ -276,7 +276,7 @@
   			<p class="info">
   				We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for the little critters to realise they've been tagged - so you have to be fast! 
   			</p>
-        <ul id="accordion">
+            <ul id="accordion">
         	<li class="active">
         		A-List Celebrities
         		<ul>
@@ -306,8 +306,8 @@
         			<li>Rove Live</li>
         		</ul>
         	</li>
-        </ul> 
-      </div>     
+            </ul> 
+            </div>     
                     <br class="clear">
                     <hr>
 
@@ -407,7 +407,7 @@
                             <img id="plane-background" src="./img/plane-background.png" width="935px">
                         </div>                    
 			        </div>
-                </div><!-- end-content -->
+                </div><!-- end-content --
 				 </div><!-- end-col-12 -->
 				<footer class="data" id="html5style2footer"> 
                     <div class="footer-inner">        
@@ -525,7 +525,7 @@
                 <script src="../orris0/main.js"></script>
 			    <a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 							
-         <!--           		        
+                    		        
 		</div><!-- end wrapper -->
     </body><!-- end body  -->   
 </html>
