--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-96 39638377144073">
-	    <meta property="og:title" content="A Basic HTML5 Tememplated9
+	    <meta property="og:title" content="A Basic HTML5 Tememplated">
         <meta property="og:type" content="website">
         <meta property="og:audio:type" content="audio/mpeg">
         <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
@@ -27,7 +27,7 @@
 		<link rel="stylesheet" href="css-jq/base.css" media="screen">	
         <link rel="stylesheet" href="navigation.css" media="screen">
         <script src="jquery.easing.1.3.js"></script>
-        <script src="script.js"></script>
+        <script src="./js/script.js"></script>
 
 		<link rel="stylesheet" href="CSS/lightbox.css">
 		
