--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 		<!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-        <!-- Plugin CSS -->
+        <!-- Plugin CSS --
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 	    <!--Add conditional Javascript-->
-        <!-- Favicon-->	            
-        <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+        <!-- Favicon--	            
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
         <link rel="alternate" type="application/pdf" href="MainPage.pdf">
 	    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
 	    <link rel="author" type="text/html" href="https://orris0.github.io/">
@@ -79,7 +79,7 @@
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script src="js/jquery.mobile-1.0.1.min.js"></script>
         <script type="text/javascript" src="assets/js/ui.js"></script>
-        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+        <script type="text/javascript" src="../js/jquery-1.7-min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
         <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>  
